# interprocess_communication

./: .gitignore  CMakeLists.txt  README.md  build.sh  client_executable  host_executable  host_mmap  host_pipe  host_shm
client/: CMakeLists.txt  client.cpp
connections/: conn.h
connections/mmap/: CMakeLists.txt  conn_mmap.cpp  conn_mmap.hpp
connections/pipe/: CMakeLists.txt  conn_pipe.cpp  conn_pipe.hpp
connections/shm/: CMakeLists.txt  conn_shm.cpp  conn_shm.hpp
host/: CMakeLists.txt  host.cpp  host.hpp
players/: players.cpp  players.hpp
timed_ops/: timed_ops.cpp  timed_ops.hpp
timed_semaphore/: timed_ops.cpp  timed_ops.hpp  timed_sem.cpp  timed_sem.hpp
